Tue Mar 14 18:46:17 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Match now has the appropriate virtual methods, which are
	  implemented by LeafMatch, and will be implemented by MultiMatch.
	  Some work in OmEnquire, so that I can test this.

Tue Mar 14 13:33:43 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make sure we don't have -g in compile line if debugging is off.

Thu Mar  9 17:12:16 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.1.0

Thu Mar  9 17:48:02 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix many spurious debugging messages

Thu Mar  9 17:03:35 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added test for OmBatchEnquire (and fixed a bug in it)

Thu Mar  9 16:00:18 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Don't use -O6 when debugging is turned on.  Debug compiles
	  are much faster now.

Thu Mar  9 15:46:17 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stemtest.pl now cleans up after itself a bit better.

Thu Mar  9 15:17:47 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Use Stats objects to pass statistics needed for the match around,
	  instead of directly asking the database.

	* Change parameters for BM25Weight: attach less importance to
	  document length.

	* Now copes with empty sub-databases rather better.

	* Calculate max_possible_weight (and thus percentages) correctly
	  when using BM25Weight.  (Had forgotten additive parameter.)

	* More debugging messages available.

Thu Mar  9 11:20:55 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed inline from omenquireinternal methods.

Wed Mar  8 18:24:27 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmBatchEnquire for batch queries.

Tue Mar  7 18:09:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added configure option to use error-checking mutexes instead
	  of the (portable) default.